--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,22 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+# Ignore following directories and files
+# other version control
+.svn/
 
-# Folder config file
-Desktop.ini
+# Eclipse workspace
+.metadata/
+.recommenders/
+RemoteSystemsTempFiles/
+.settings/
+.classpath
+.project
+#Intellij Idea
+.idea/
+*.iml
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+# binaries
+bin/
+target/
+*.class
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# some non-source directories and files
+*.log
