--- a/api-rest/pom.xml
+++ b/api-rest/pom.xml
@@ -11,20 +11,18 @@
     </parent>
 
     <groupId>org.javaee.soap2rest</groupId>
-    <artifactId>impl-rest</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>api-rest</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>org.javaee.soap2rest</groupId>
-            <artifactId>api-rest</artifactId>
-            <version>${project.parent.version}</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.javaee.soap2rest</groupId>
-            <artifactId>utils</artifactId>
-            <version>${project.parent.version}</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
     </dependencies>
+
 
 </project>
