--- a/rest/impl/pom.xml
+++ b/rest/impl/pom.xml
@@ -5,25 +5,27 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.javaee.soap2rest</groupId>
         <artifactId>rest</artifactId>
+        <groupId>org.spring.soap2rest</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.javaee.soap2rest.rest</groupId>
+    <groupId>org.spring.soap2rest.rest</groupId>
     <artifactId>impl</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>org.javaee.soap2rest</groupId>
+            <groupId>org.spring.soap2rest</groupId>
             <artifactId>utils</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.javaee.soap2rest.rest</groupId>
+            <groupId>org.spring.soap2rest.rest</groupId>
             <artifactId>api</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
+
+
 
 </project>
