--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.javaee</groupId>
+        <groupId>org.spring</groupId>
         <artifactId>soap2rest</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.javaee.soap2rest</groupId>
+    <groupId>org.spring.soap2rest</groupId>
     <artifactId>rest</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -20,5 +19,7 @@
         <module>impl</module>
         <module>web</module>
     </modules>
+
+
 
 </project>
