--- a/soap/impl/pom.xml
+++ b/soap/impl/pom.xml
@@ -5,23 +5,22 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.javaee.soap2rest</groupId>
+        <groupId>org.spring.soap2rest</groupId>
         <artifactId>soap</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.javaee.soap2rest.soap</groupId>
+    <groupId>org.spring.soap2rest.soap</groupId>
     <artifactId>impl</artifactId>
-    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
-            <groupId>org.javaee.soap2rest</groupId>
+            <groupId>org.spring.soap2rest</groupId>
             <artifactId>utils</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.javaee.soap2rest.rest</groupId>
+            <groupId>org.spring.soap2rest.rest</groupId>
             <artifactId>api</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -53,7 +52,7 @@
                             </wsdlFiles>
                             <sourceDestDir>${project.build.directory}/generated-sources</sourceDestDir>
                             <destDir>${project.build.directory}/generated-sources</destDir>
-                            <packageName>org.javaee.soap2rest.soap.impl.generated.ds.ws</packageName>
+                            <packageName>org.spring.soap2rest.soap.impl.generated.ds.ws</packageName>
                             <bindingFiles>
                                 <bindingFile>${basedir}/src/main/resources/bindings.xjb</bindingFile>
                             </bindingFiles>
@@ -63,5 +62,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
