--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -5,14 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.javaee</groupId>
+        <groupId>org.spring</groupId>
         <artifactId>soap2rest</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.javaee.soap2rest</groupId>
+    <groupId>org.spring.soap2rest</groupId>
     <artifactId>utils</artifactId>
-    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -24,5 +23,17 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
