--- a/rest/api/pom.xml
+++ b/rest/api/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <groupId>org.javaee.soap2rest.rest</groupId>
-    <artifactId>api</artifactId>
+    <artifactId>rest-api</artifactId>
 
     <dependencies>
         <dependency>
