--- a/soap/impl/pom.xml
+++ b/soap/impl/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <groupId>org.javaee.soap2rest.soap</groupId>
-    <artifactId>impl</artifactId>
+    <artifactId>soap-impl</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -22,7 +22,7 @@
         </dependency>
         <dependency>
             <groupId>org.javaee.soap2rest.rest</groupId>
-            <artifactId>api</artifactId>
+            <artifactId>rest-api</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
