--- a/rest/impl/pom.xml
+++ b/rest/impl/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <groupId>org.spring.soap2rest.rest</groupId>
-    <artifactId>impl</artifactId>
+    <artifactId>rest-impl</artifactId>
 
     <dependencies>
         <dependency>
@@ -21,7 +21,7 @@
         </dependency>
         <dependency>
             <groupId>org.spring.soap2rest.rest</groupId>
-            <artifactId>api</artifactId>
+            <artifactId>rest-api</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
