improve rest-security and roles

--- a/rest/web/src/main/resources/roles.properties
+++ b/rest/web/src/main/resources/roles.properties
@@ -1,1 +1,2 @@
-restadmin=WEBSERVICE.SOAP2REST.REST
+restadmin=WEBSERVICE.SOAP2REST.REST.ADMIN, WEBSERVICE.SOAP2REST.REST.CLIENT
+restclient=WEBSERVICE.SOAP2REST.REST.CLIENT
