change soap:impl:RestServices class

--- a/soap/impl/pom.xml
+++ b/soap/impl/pom.xml
@@ -24,6 +24,10 @@
             <artifactId>rest-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
