--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <jasckson.version>2.8.1</jasckson.version>
-        <!--spring.version>4.2.5.RELEASE</spring.version-->
-        <!--spring.boot.version>1.5.1.RELEASE</spring.boot.version-->
-        <!--spring.ws.version>2.4.0.RELEASE</spring.ws.version-->
+        <guava.version>21.0</guava.version>
     </properties>
 
     <dependencyManagement>
@@ -42,42 +40,11 @@
                 <artifactId>jackson-databind</artifactId>
                 <version>${jasckson.version}</version>
             </dependency>
-
-            <!--dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-web</artifactId>
-            </dependency>
             <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-security</artifactId>
-            </dependency-->
-
-            <!--dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-web</artifactId>
-                <version>${spring.version}</version>
-                <type>jar</type>
-                <scope>compile</scope>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-config</artifactId>
-                <version>${spring.version}</version>
-                <type>jar</type>
-                <scope>compile</scope>
-            </dependency-->
-
-            <!-- soap -->
-            <!--dependency>
-                <groupId>org.springframework.ws</groupId>
-                <artifactId>spring-ws-core</artifactId>
-                <version>${spring.ws.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.ws</groupId>
-                <artifactId>spring-ws-security</artifactId>
-                <version>${spring.ws.version}</version>
-            </dependency-->
 
             <!-- to avoid this exception: java.lang.NoSuchMethodError: org.apache.xml.security.utils.I18n.init -->
             <dependency>
