--- a/soap/impl/pom.xml
+++ b/soap/impl/pom.xml
@@ -28,6 +28,12 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-integration</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
