change regexp + minor changes

--- a/rest/web/src/main/webapp/WEB-INF/web.xml
+++ b/rest/web/src/main/webapp/WEB-INF/web.xml
@@ -4,14 +4,20 @@
 <web-app>
 
     <context-param>
-        <param-name>resteasy.providers</param-name>
-        <param-value>org.javaee.soap2rest.rest.web.utils.EjbExceptionHandler</param-value>
+        <param-name>resteasy.provider.baduri</param-name>
+        <param-value>org.javaee.soap2rest.rest.web.utils.BadURIExceptionMapper</param-value>
+    </context-param>
+
+    <context-param>
+        <param-name>resteasy.provider.ejb</param-name>
+        <param-value>org.javaee.soap2rest.rest.web.utils.EjbExceptionMapper</param-value>
     </context-param>
 
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>Soap2RestSecurityDomain</web-resource-name>
             <url-pattern>/*</url-pattern>
+            <http-method>GET</http-method>
             <http-method>POST</http-method>
             <http-method>PUT</http-method>
         </web-resource-collection>
