--- a/rest/api/build.gradle
+++ b/rest/api/build.gradle
@@ -1,6 +1,5 @@
 dependencies {
     compile project(':utils')
 
-    compile 'com.fasterxml.jackson.core:jackson-core:2.8.1'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.1'
+    compile libraries.jackson
 }
