--- a/rest/impl/build.gradle
+++ b/rest/impl/build.gradle
@@ -2,6 +2,6 @@ dependencies {
     compile project(':utils')
     compile project(':rest:api')
 
-    compile 'org.liquibase:liquibase-core:3.5.3'
-    compile 'com.h2database:h2:1.4.193'
+    compile "org.liquibase:liquibase-core:${versions.liquibase}"
+    compile "com.h2database:h2:${versions.h2}"
 }
