--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,6 +1,3 @@
-//apply plugin: 'java'
-
 dependencies {
-    compile 'com.fasterxml.jackson.core:jackson-core:2.8.1'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.1'
+    compile libraries.jackson
 }
